element fades corrected and projects header set to align center

--- a/Portfolio-CSS.css
+++ b/Portfolio-CSS.css
@@ -120,6 +120,7 @@ h2 {
   padding: 0 4rem;
   border-left: 3px double goldenrod;
   border-right: 3px double goldenrod;
+  margin: 0 auto;
 }
 
 .banner {
@@ -589,6 +590,7 @@ h2 {
   padding: 4.5rem 0 0 0;
   background-color: black;
   position: relative;
+  text-align: center;
 }
 
 .projects {
@@ -644,7 +646,7 @@ h2 {
 
 .information {
   width: 5%;
-  margin-top: 0;
+  margin-top: -5%; 
   cursor: pointer;
 }
 
@@ -996,6 +998,20 @@ footer > a {
   color: rgb(193, 193, 193);
 }
 
+.slowest-hide {
+  opacity: 0;
+  filter: blur(5px);
+  transform: translateX(-100%);
+  transition: all 1.9s;
+}
+
+.slower-hide {
+  opacity: 0;
+  filter: blur(5px);
+  transform: translateX(-100%);
+  transition: all 1.6s;
+}
+
 .slow-hide {
   opacity: 0;
   filter: blur(5px);
@@ -1007,6 +1023,13 @@ footer > a {
   opacity: 0;
   filter: blur(5px);
   transform: translateX(-100%);
+  transition: all 1s;
+}
+
+.reverse-hide {
+  opacity: 0;
+  filter: blur(5px);
+  transform: translateX(100%);
   transition: all 1s;
 }
 
